# wekala

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  PHASE_LOG.md  README.md  biome.json  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
admin_panel/: .env.example  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
admin_panel/src/: App.tsx  index.css  main.tsx
admin_panel/src/components/: ActionTrail.tsx  AuditFilters.tsx  AuditTable.tsx  LanguageSwitcher.tsx  LocaleToggle.tsx  MicButton.tsx  ReportDetail.tsx  StatCard.tsx  StatusBadge.tsx  TypewriterCaption.tsx  VoiceOrb.tsx
admin_panel/src/components/chat/: Composer.tsx  DemoPlayer.tsx  MessageList.tsx  useDemoPlayer.ts
admin_panel/src/components/layout/: AdminLayout.tsx  Sidebar.tsx
admin_panel/src/hooks/: useHashRoute.ts  useReports.ts  useTypewriter.ts  useVoiceSession.ts
admin_panel/src/lib/: icons.tsx  nav.tsx
admin_panel/src/lib/i18n/: I18nProvider.tsx  config.ts
admin_panel/src/mock/: data.ts  demoScenarios.ts
admin_panel/src/pages/: AuditLogPage.tsx  DashboardPage.tsx  MembersPage.tsx  OverviewPage.tsx  ReportsPage.tsx  SettingsPage.tsx  SilaPage.tsx  VoicePage.tsx
admin_panel/src/types/: api.ts
admin_panel/src/utils/: audit.ts  format.ts
apps/api/: Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_workspaces.py  0002_memberships.py  0003_audit_log.py  0004_api_keys.py  0005_agents.py  0006_agent_versions.py  0007_agent_imports.py  0008_hires.py  0009_reviews.py  0010_categories.py  0011_knowledge_bases.py  0012_kb_chunks.py  0013_workspace_description.py  0014_audit_log_workspace_fk_set_null.py  0015_tools_and_mcp.py  0016_vetting.py  0017_public_api.py  0018_analytics.py  0019_n8n_user_links.py  0020_mcp_server_auth.py  0021_kb_jobs.py  0022_agent_kind.py
apps/api/scripts/: seed_pdpl_kb.py
apps/api/tests/: conftest.py  test_agent_stream.py  test_agents.py  test_anomaly.py  test_auth.py  test_bazaar.py  test_dify_import.py  test_injection_scanner.py  test_kb.py  test_kb_worker.py  test_llm_scanner.py  test_mcp_client.py  test_n8n_workflows.py  test_pii_scanner.py  test_ssrf_guard.py  test_tool_url_extract.py  test_webhook_sign.py  test_workflow_agent.py  test_workflow_scanner.py  test_workspaces.py
apps/api/wekala/: main.py
apps/api/wekala/adapters/agent_runtime/: base.py  dify.py  n8n_workflow.py
apps/api/wekala/adapters/auth/: api_key.py  base.py  supabase.py
apps/api/wekala/adapters/document_processor/: base.py  pypdf_adapter.py
apps/api/wekala/adapters/embedding/: base.py  ollama.py
apps/api/wekala/adapters/llm/: base.py  ollama.py
apps/api/wekala/adapters/mcp/: base.py  http_client.py
apps/api/wekala/adapters/n8n/: __init__.py  base.py  rest.py
apps/api/wekala/adapters/scanner/: base.py  llm.py  pii.py  prompt_injection.py  workflow.py
apps/api/wekala/adapters/scanner/recognizers/: oman.py
apps/api/wekala/adapters/search/: base.py  meilisearch.py
apps/api/wekala/adapters/storage/: base.py  supabase.py
apps/api/wekala/adapters/virus_scanner/: base.py  clamav.py
apps/api/wekala/api/: deps.py
apps/api/wekala/api/v1/: agents.py  analytics.py  auth.py  bazaar.py  knowledge_base.py  n8n.py  public.py  router.py  tools.py  users.py  vetting.py  webhooks.py  workspaces.py
apps/api/wekala/core/: config.py  constants.py
apps/api/wekala/core/policies/: analytics_policies.py  classification_policy.py  pdpl_policy.py
apps/api/wekala/core/security/: field_crypto.py  ssrf_guard.py
apps/api/wekala/core/utils/: workflow_validator.py  yaml_validator.py
apps/api/wekala/db/: models.py  session.py
apps/api/wekala/db/repositories/: agent.py  agent_import.py  agent_version.py  audit.py  bazaar.py  category.py  hire.py  knowledge_base.py  mcp_server.py  membership.py  review.py  vetting.py  workspace.py
apps/api/wekala/services/: agent_service.py  analytics_service.py  anomaly_service.py  api_key_service.py  bazaar_service.py  kb_service.py  n8n_provisioning.py  public_invocation_service.py  rate_limit_service.py  tool_service.py  vetting_service.py  webhook_service.py  workspace_service.py
apps/api/wekala/templates/: customer_support.yaml  test.yaml
apps/api/wekala/worker/: __init__.py  __main__.py  runner.py
apps/web/: Dockerfile  biome.json  next.config.ts  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/app/(app)/: layout.tsx
apps/web/app/(auth)/: layout.tsx
apps/web/lib/: api.ts  auth-storage.ts  constants.ts  jwt-user.ts  password-strength.ts  sse.ts  toast.tsx  use-n8n-session.ts  use-platform.ts  use-token.ts  utils.ts  yaml-security-scan.ts
apps/web/messages/: en.json
docs/: HANDOFF.md
docs/adr/: 0000-template.md
docs/phases/: MANUAL_TEST_FRONTEND.md  MANUAL_TEST_PHASE_0.md  MANUAL_TEST_PHASE_11.md  MANUAL_TEST_PHASE_12.md  MANUAL_TEST_PHASE_13.md  MANUAL_TEST_PHASE_14.md  MANUAL_TEST_PHASE_2.md  MANUAL_TEST_PHASE_3.md  MANUAL_TEST_PHASE_4.md  MANUAL_TEST_PHASE_5.md  MANUAL_TEST_PHASE_6.md  MANUAL_TEST_PHASE_7.md  MANUAL_TEST_PHASE_8.md  poisoned-test-agent.yaml
infra/opa/policies/: authz.rego  data.json
infra/policies/: anomalies.yaml  classification.yaml  compute_cost.yaml  hours_saved.yaml  oman-pdpl-source.md  pdpl.yaml
infra/supabase/: kong.yml
infra/supabase/templates/: confirmation.html
scripts/: keygen.js  test-phase-0.sh  test-phase-1.sh
(+108 files in other folders)
