[project]
name = "wekala-api"
version = "0.1.0"
description = "Wekala platform API — sovereign AI agent marketplace"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic[email]>=2.10",
    "pydantic-settings>=2.7",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "httpx>=0.28",
    "argon2-cffi>=23.1",
    "python-jose[cryptography]>=3.3",
    "structlog>=24.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.35",
    "httpx>=0.28",
    "mypy>=1.13",
    "ruff>=0.8",
    "sqlalchemy[mypy]>=2.0",
    "types-python-jose>=3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wekala"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Alembic migrations have long SA column definitions — readability > line limit
"alembic/*" = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
