[project]
name = "wekala-api"
version = "0.1.0"
description = "Wekala platform API — sovereign AI agent marketplace"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    # Pin starlette explicitly to dodge PYSEC-2026-161 in 1.0.0 (the version
    # the current fastapi pulls in transitively). Drop the pin once fastapi's
    # own range moves past it.
    "starlette>=1.0.1",
    "uvicorn[standard]>=0.32",
    "pydantic[email]>=2.10",
    "pydantic-settings>=2.7",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "httpx>=0.28",
    "PyYAML>=6.0",
    "python-multipart>=0.0.12",
    "argon2-cffi>=23.1",
    "python-jose[cryptography]>=3.3",
    "structlog>=24.4",
    "meilisearch>=0.31",
    "better-profanity>=0.7",
    # Phase 4 — Knowledge Base & RAG
    "pypdf>=5.1",
    "python-docx>=1.1",
    "python-magic>=0.4.27",
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "beautifulsoup4>=4.12",
    "pytesseract>=0.3.13",
    "lxml>=5.3",
    # Phase 5 — Tools, MCP & integrations
    "jsonschema>=4.23",
    # Phase B multi-tenancy — Fernet at-rest encryption for stored n8n passwords.
    "cryptography>=44.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.35",
    "httpx>=0.28",
    "mypy>=1.13",
    "ruff>=0.8",
    "sqlalchemy[mypy]>=2.0",
    "types-python-jose>=3.3",
    "types-PyYAML>=6.0",
    "types-jsonschema>=4.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wekala"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Alembic migrations have long SA column definitions — readability > line limit
"alembic/*" = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["sqlalchemy.ext.mypy.plugin"]
# Test files use untyped fixtures + monkeypatch heavily — strict mode there
# costs more than it earns. Source code stays under strict.
exclude = ["^tests/"]

[[tool.mypy.overrides]]
module = [
  "better_profanity.*",
  "meilisearch.*",
  "magic.*",
  "pypdf.*",
  "docx.*",
  "bs4.*",
  "presidio_analyzer.*",
  "presidio_anonymizer.*",
  "pytesseract.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
